# pdfarchive

./: LICENSE  MANIFEST.in  README.md  harness.py  pyproject.toml  setup.cfg  tox.ini
pdfarchive/: cli.py  external.py  index.py
pdfarchive/assets/: site.conf
pdfarchive/assets/css/: pdf.css
pdfarchive/assets/scripts/: shade.js
pdfarchive/templates/: archive.template  archivetable.template  containing_dir.template  dir.template  dirtable.template  file.template  filetable.template  index.template  swish-e.conf.template
pdftools-orig/: makeindex-table.pl  makeindex.pl  maketext-boring.pl  maketext.pl  makethumbs.pl  makethumbs.pl~  rebuildsite.sh  rebuildsite.sh~
pdftools-orig/bloom/: makeindex.pl  rebuildsite.sh
pdftools-orig/cgw/: makeindex.pl  makethumbs.pl  rebuildsite.sh
pdftools-orig/ebooks/: makeindex.pl  maketext.pl  rebuildsite.sh
requirements/: dev.in  dev.txt  main.in  main.txt
tests/: build_site_test.py  conftest.py  index_test.py
tests/testdata/output/index/: index.html
tests/testdata/output/index/Text/: has_text.txt  pdf_with_text.txt
tests/testdata/output/index/Text/subfolder/: image_of_text.txt
tests/testdata/output/index/b/: index.html
tests/testdata/output/index/config/: swish-e.conf
tests/testdata/output/index/subfolder/: index.html
