[metadata]
name = pdfarchive
description = Tool to generate HTML tree and indexed text for PDF archive
author = Adam Thornton
author_email = athornton@gmail.com
long_description = file: README.md, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/athornton/pdfarchive
project_urls =
    Source code = https://github.com/athornton/pdfarchive
    Issue tracker = https://github.com/athornton/pdfarchive/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Natural Language :: English
    Operating System :: POSIX
keywords =
    pdf, index

[options]
zip_safe = False
include_package_data = True
package_dir =
    = .
packages=find:
python_requires = >=3.9
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    pdfarchive = pdfarchive.cli:main

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
